[package]
name = "oop-rgr"
version = "0.1.0"
authors = ["gidra5 <hranitel.52@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston_window = "*"
vecmath = "*"
camera_controllers = "*"
gfx = "*"
shader_version = "*"
conrod = "*"